compiler/typ/tests/fixtures/diagnostics/0054_core_function_application_mismatch_05.ml.infer.expected
File "0054_core_function_application_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0054_core_function_application_mismatch_05 is not a valid module name.

File "0054_core_function_application_mismatch_05.ml", line 2, characters 24-28:
2 | let _ = consume_epsilon true
                            ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
