compiler/typ/tests/fixtures/diagnostics/0054_core_function_application_mismatch_05.ml
let consume_epsilon (x : int) : int = x
let _ = consume_epsilon true
